[project]
name = "capnp-stub-generator"
version = "2.1.2"
description = "Stub generator for capnproto schemas. Fork of https://gitlab.com/mic_public/tools/python-helpers/capnp-stub-generator."
readme = "README.md"
authors = [
    { name = "Adrian Figueroa", email = "adrian.figueroa@metirionic.com" },
    { name = "hazyfossa", email = "hazyfossa@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "black>=24.10.0",
    "isort>=5.13.2",
    "pycapnp>=2.0.0",
]

[project.scripts]
capnp-stub-generator = "capnp_stub_generator.cli:main"

[project.urls]
"Homepage" = "https://github.com/hazyfossa/capnp-stub-generator"
"Issues" = "https://github.com/hazyfossa/capnp-stub-generator/issues"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
